[package]
name = "maguro"
description = "A fast YouTube downloader."
version = "0.0.1"
authors = ["krashanoff <leo@krashanoff.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/krashanoff/maguro"
categories = ["command-line-utilities", "api-bindings", "multimedia::video"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "maguro"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4"
clap = "2.33.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.14"
mime = "0.3.16"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
tokio = { version = "1", features = ["rt", "macros", "fs"] }
