[package]
name = "maguro"
description = "A fast YouTube downloader."
version = "0.0.1"
authors = ["krashanoff <leo@krashanoff.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/krashanoff/maguro"
repository = "https://github.com/krashanoff/maguro"
categories = ["command-line-utilities", "api-bindings", "multimedia::video"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "maguro"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4"
clap = "2.33.3"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.14"
mime = "0.3.16"
regex = "1.5"
serde_json = "1.0"
serde_urlencoded = "0.7.0"
serde-xml-rs = "0.4.1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
